Fix scrollbar always visible

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -26,3 +26,7 @@
 ::-webkit-scrollbar-thumb:hover {
     background: rgba($color: #555, $alpha: 0.5);
 }
+
+body {
+    background-color: #fafafa;
+}
